--- a/PoppaChan/menu.html
+++ b/PoppaChan/menu.html
@@ -20,7 +20,7 @@
   <p><a href="https://telegra.ph/PoppaChan-Miku-Rabbit-Hole-168P18V-08-22">PoppaChan Miku Rabbit Hole 168P18V</a></p>
   <p><a href="https://telegra.ph/PoppaChan-Jingliu-08-22">PoppaChan Jingliu</a></p>
   <p><a href="https://telegra.ph/PoppaChan-Bailu-155P12V-08-23">PoppaChan Bailu 155P12V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/PoppaChan-Houshou-Marine-08-23">PoppaChan Houshou Marine</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
