--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -81,8 +81,8 @@
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-%E7%A5%9D%E5%B7%AB%E7%A5%9E%E5%A5%B3-120p-08-23">玉汇 祝巫神女 120p</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87-%E7%BB%BF%E6%84%8F%E7%9B%8E%E7%84%B6-93P-244GB-08-23">yuuhui玉汇 绿意盎然 [93P-2.44GB]</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-%E5%8D%88%E5%90%8E%E7%89%9B%E4%B9%B3%E6%97%B6%E9%97%B4-135p-08-23">玉汇 午后牛乳时间 135p</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Vol038-%E6%8C%96%E6%8E%98%E5%A7%AC-130p-08-23">玉汇 Vol.038 挖掘姬 130p</a></p>
+  <p><a href="https://telegra.ph/Yuuhui%E7%8E%89%E6%B1%87-Erophone-Re-%E7%9C%9F%E5%AD%90-%E5%92%8C%E6%9C%8D%E6%8A%B9%E6%B2%B982P-08-23">Yuuhui玉汇 Erophone Re 真子-和服抹油[82P]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
