--- a/安食Ajiki全集/menu.html
+++ b/安食Ajiki全集/menu.html
@@ -13,7 +13,7 @@
   <p><a href="https://telegra.ph/%E5%AE%89%E9%A3%9FAjiki-%E5%BC%82%E7%9E%B3%E5%B0%8F%E9%AD%85%E9%AD%94-22P-08-21">安食Ajiki 异瞳小魅魔 22P</a></p>
   <p><a href="https://telegra.ph/%E5%AE%89%E9%A3%9FAjiki-%E7%99%BD%E7%8C%AB%E7%8C%AB-48P-08-22">安食Ajiki 白猫猫 48P</a></p>
   <p><a href="https://telegra.ph/%E5%AE%89%E9%A3%9FAjiki-%E5%8E%9F%E7%A5%9E-%E9%9B%B7%E7%94%B5%E5%B0%86%E5%86%9B%E9%AD%85%E9%AD%94-35P-259M-08-23">安食Ajiki 原神 雷电将军魅魔 [35P-259M]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%AE%89%E9%A3%9FAjiki-%E5%8E%9F%E7%A5%9E-%E7%94%98%E9%9B%A8-48P-874MB-08-23">安食Ajiki 原神 甘雨 [48P-874MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
