--- a/布丁大法 米布丁&油布丁 再来一勺大布丁全集/menu.html
+++ b/布丁大法 米布丁&油布丁 再来一勺大布丁全集/menu.html
@@ -47,7 +47,7 @@
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-%E4%BF%AE%E5%A5%B3-167P-3V-08-23">布丁大法 修女 167P 3V</a></p>  
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-%E7%88%B1%E5%BF%83%E5%A5%B3%E4%BB%86-121P1V-08-23-2">布丁大法 爱心女仆 121P1V</a></p>  
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-%E9%BB%91%E5%8A%A0%E4%BB%91-08-23">布丁大法 黑加仑</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-C9-%E9%BB%91%E5%B7%A7-08-23">布丁 C9 黑巧</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
