--- a/白烨全集/menu.html
+++ b/白烨全集/menu.html
@@ -10,7 +10,7 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%99%BD%E7%83%A8-%E9%BB%91%E7%B3%BB%E7%8C%AB%E5%92%AA%E5%B0%91%E5%A5%B3-62P21V-121GB-08-23">白烨 黑系猫咪少女 [62P21V-1.21GB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E7%99%BD%E7%83%A8-%E8%83%B6%E8%A1%A3%E9%AD%85%E9%AD%94%E5%A7%90%E5%A7%90-58P4V-08-23">白烨 胶衣魅魔姐姐 58P4V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
