--- a/KANEKO_咔喵全集/menu.html
+++ b/KANEKO_咔喵全集/menu.html
@@ -20,10 +20,9 @@
   <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF%E5%8D%8E%E7%94%B2-%E5%83%B5%E5%B0%B8-%E9%AB%98%E6%B8%85-55p115s-08-20">KANEKO_咔喵 - 碧蓝航线华甲_僵尸_高清_55p+115s</a></p>
   <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5-A%E6%9C%AC%E4%BF%AE%E5%A5%B3-88P-08-22">KANEKO_咔喵 A本修女 88P</a></p>
   <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5-%E4%BF%A1%E6%B5%93%E8%B5%9B%E8%BD%A6-%E6%B5%B4%E7%BC%B8-60P2V-136GB-08-23">KANEKO_咔喵 信浓赛车 浴缸 60P2V 1.36GB</a></p>
-  <p><a href="https://telegra.ph/%E5%95%8A%E6%97%A5%E6%97%A5-Ganlory-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E8%BF%B7%E7%B3%8A%E5%A5%B3%E4%BB%86-40P1V-295MB-08-23">啊日日_Ganlory 碧蓝航线 迷糊女仆 40P1V 295MB</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5-%E7%BA%A6%E5%B0%94%E5%A4%AA%E5%A4%AA%E5%90%8C%E4%BA%BA%E5%85%94%E5%A5%B3%E9%83%8E-63P5V-148GB-08-23">KANEKO_咔喵 约尔太太同人兔女郎 [63P5V-1.48GB]</a></p>
+  <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5-%E4%B8%80%E4%B9%8B%E6%BF%91%E6%98%8E%E6%97%A5%E5%A5%88%E5%90%8C%E4%BA%BA%E5%A5%B3%E4%BB%86-46P6V-206GB-08-23">KANEKO_咔喵 一之濑明日奈同人女仆 [46P6V-2.06GB]</a></p>
+  <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5-%E5%A4%A7%E5%87%A4%E5%A9%9A%E7%BA%B1%E8%8A%B1%E5%AB%81-47P-08-23">KANEKO_咔喵 大凤婚纱花嫁 47P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
