--- a/けん研(けんけん) eat me全集/menu.html
+++ b/けん研(けんけん) eat me全集/menu.html
@@ -25,9 +25,9 @@
   <p><a href="https://telegra.ph/%E3%81%91%E3%82%93%E3%81%91%E3%82%93-2023%E5%B9%B407%E6%9C%88-Fantia-2000%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-6-08-23">けんけん 2023年07月 Fantia 2000日圓訂閱內容 6</a></p>
   <p><a href="https://telegra.ph/%E3%81%91%E3%82%93%E3%81%91%E3%82%93-2023%E5%B9%B407%E6%9C%88-Fantia-2000%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-7-08-23">けんけん 2023年07月 Fantia 2000日圓訂閱內容 7</a></p>
   <p><a href="https://telegra.ph/%E3%81%91%E3%82%93%E3%81%91%E3%82%93-2023%E5%B9%B407%E6%9C%88-Fantia-2000%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-8-08-23">けんけん 2023年07月 Fantia 2000日圓訂閱內容 8</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E3%81%91%E3%82%93%E3%81%91%E3%82%93-2023%E5%B9%B406%E6%9C%88-Fantia-2000%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-1-08-23">けんけん 2023年06月 Fantia 2000日圓訂閱內容 1</a></p>
+  <p><a href="https://telegra.ph/%E3%81%91%E3%82%93%E3%81%91%E3%82%93-2023%E5%B9%B406%E6%9C%88-Fantia-2000%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-2-08-23">けんけん 2023年06月 Fantia 2000日圓訂閱內容 2</a></p>
+  <p><a href="https://telegra.ph/%E3%81%91%E3%82%93%E3%81%91%E3%82%93-2023%E5%B9%B406%E6%9C%88-Fantia-2000%E6%97%A5%E5%9C%93%E8%A8%82%E9%96%B1%E5%85%A7%E5%AE%B9-3-08-23">けんけん 2023年06月 Fantia 2000日圓訂閱內容 3</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
