--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -56,6 +56,21 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E7%8E%9B%E5%A5%87%E7%8E%9B%E6%8A%A4%E5%A3%AB-08-23">九言 玛奇玛护士</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E4%BC%98%E8%8F%88%E8%87%AA%E6%8B%8D-31P4V-%E5%8E%9F%E7%A5%9E-08-23">九言 优菈自拍 31P4V （原神）</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%B7%AB%E5%A5%B3%E7%9A%84%E7%88%B1-08-23">九言 巫女的爱</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%88%98%E6%98%93%E6%96%AF-50P-08-23">九言 刘易斯 50P</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-2b%E7%9A%84%E5%AB%81%E8%A1%A3-08-23">九言 2b的嫁衣</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E4%BF%AE%E5%A5%B3%E4%B8%8E%E7%8B%97-60P6V-08-23">九言 修女与狗 60P6V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p> 
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p> 
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p> 
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p> 
 </body>
 </html>
