--- a/星之迟迟全集/menu.html
+++ b/星之迟迟全集/menu.html
@@ -88,8 +88,20 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-5%E6%9C%88%E8%AE%A1%E5%88%92-2-08-23">星之迟迟 2023 5月计划 2</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-5%E6%9C%88%E8%AE%A1%E5%88%92-3-08-23">星之迟迟 2023 5月计划 3</a></p>  
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-5%E6%9C%88%E8%AE%A1%E5%88%92-4-08-23">星之迟迟 2023 5月计划 4</a></p>  
-  <p><a href="">星之</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-6-D7%E6%9C%8823%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-23">星之迟迟 2023-6-D</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-6-A-08-23">星之迟迟 2023-6-A</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-6-B-08-23">星之迟迟 2023-6-B</a></p>   
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2023-6-c-08-23">星之迟迟 2023-6-c</a></p>  
+  <p><a href="">星之</a></p> 
   <p><a href="">星之</a></p>  
-  <p><a href="">星之</a></p>   
+  <p><a href="">星之</a></p> 
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p> 
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p> 
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p> 
+  <p><a href="">星之</a></p>  
+  <p><a href="">星之</a></p> 
 </body>
 </html>
