--- a/紧急企划全集/menu.html
+++ b/紧急企划全集/menu.html
@@ -11,9 +11,9 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%B4%A7%E6%80%A5%E4%BC%81%E5%88%92-%E8%A7%81%E5%B8%8C-%E9%BB%91%E7%99%BD%E6%8A%A4%E5%A3%AB-80P-08-21">紧急企划 见希-黑白护士 80P</a></p>
   <p><a href="https://telegra.ph/%E7%B4%A7%E6%80%A5%E4%BC%81%E5%88%92-EX-016-%E8%A7%81%E5%B8%8Cw-49P-132GB-08-23">紧急企划 EX-016 见希w [49P-1.32GB]</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/%E7%B4%A7%E6%80%A5%E4%BC%81%E5%88%92-EX-014-%E8%A7%81%E5%B8%8Cw-%E4%BA%AE%E9%BB%91%E4%B8%9D%E7%9A%AE%E8%A3%99%E5%B0%8F%E6%81%B6%E9%AD%94-54P1V-294GB-08-23">紧急企划 EX-014 见希w 亮黑丝皮裙小恶魔 [54P1V-2.94GB]</a></p>  
   <p><a href="https://telegra.ph/%E7%B4%A7%E6%80%A5%E4%BC%81%E5%88%92-%E4%B8%80%E5%8F%AA%E5%96%B5%E5%96%B5%E6%A2%93---%E9%BB%91%E4%B8%9D%E5%88%B6%E6%9C%8D-67P1V-198G-08-23">[紧急企划] 一只喵喵梓 - 黑丝制服 [67P1V-1.98G]</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/%E7%B4%A7%E6%80%A5%E4%BC%81%E5%88%92-%E5%B0%8F%E6%81%A9-%E6%8D%86%E7%BB%91-R18-08-23">紧急企划 小恩 捆绑 R18</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
