--- a/雪琪sama全集/menu.html
+++ b/雪琪sama全集/menu.html
@@ -14,8 +14,8 @@
   <p><a href="https://telegra.ph/%E9%9B%AA%E7%90%AASAMA---%E9%BB%91%E4%B8%9D%E9%95%82%E7%A9%BA%E8%A1%A3-40P4V-157GB-08-20">雪琪SAMA - 黑丝镂空衣 [40P4V-1.57GB]</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E7%90%AASAMA-%E6%B2%B9%E4%BA%AE%E9%BB%91%E4%B8%9D%E5%A4%AA%E5%A4%AA49P1V-08-21">雪琪SAMA 油亮黑丝太太49P1V</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra-%E5%96%9C%E5%A4%9A%E5%B7%9D%E5%B0%8F%E6%81%B6%E9%AD%94-%E5%88%A9%E5%85%B9-35P-08-21">雪晴Astra 喜多川小恶魔 利兹 35P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E7%90%AA-2023Vol31%E5%B0%8F%E6%81%B6%E9%AD%94%E9%80%8F%E8%A7%86%E8%A3%8550p1v-08-23">雪琪 2023.Vol.31.小恶魔透视装50p+1v</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E7%90%AASAMA-%E9%BA%BB%E8%A1%A3%E5%88%B6%E6%9C%8D%E5%85%94%E5%A5%B3%E9%83%8E-58P-08-23">雪琪SAMA 麻衣制服兔女郎 58P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
