--- a/麻花酱全集/menu.html
+++ b/麻花酱全集/menu.html
@@ -33,9 +33,9 @@
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-%E9%98%BF%E5%A6%AE%E6%96%AF-33P1V-08-22">麻花酱 阿妮斯 33P1V</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-%E9%87%91%E9%B9%BF%E5%8F%B7-20P1V-08-22">麻花酱 金鹿号 20P1V</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-%E8%8A%99%E4%B8%BD%E8%8E%B2-34P1V-08-22">麻花酱 芙丽莲</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%BA%BB%E8%8A%B1%E9%85%B1W-047%E5%85%BD%E5%92%8C%E6%9C%8D3%E5%A5%97-08-23">麻花麻花酱W 047兽和服3套 1</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%BA%BB%E8%8A%B1%E9%85%B1W-047%E5%85%BD%E5%92%8C%E6%9C%8D3%E5%A5%97-2-08-23">麻花麻花酱W 047兽和服3套 2</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%BA%BB%E8%8A%B1%E9%85%B1-%E6%96%B0%E6%B5%81%E5%B2%9A17%E5%A5%97-256P1V-238GB-08-23">麻花麻花酱 新流岚17套 [256P1V-2.38GB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
