--- a/[BLUECAKE] Hikari全集/menu.html
+++ b/[BLUECAKE] Hikari全集/menu.html
@@ -11,5 +11,10 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/BLUECAKE-Hikari-Vol8---Home-Sweet-Home-RED-110P-182G-08-23">[BLUECAKE] Hikari Vol.8 - Home Sweet Home_RED+ [110P-1.82G]</a></p>
   <p><a href="https://telegra.ph/BLUECAKE-Hikari---Outdoor-SM-NUDE-110P-24G-08-23">[BLUECAKE] Hikari - Outdoor SM NUDE 110P-2.4G</a></p>
+  <p><a href="https://telegra.ph/BLUECAKE-Hikari---Vol06---Deep-inside-me-REDSP-129P-233G-08-23">[BLUECAKE] Hikari - Vol.06 - Deep inside me RED+SP [129P-2.33G]</a></p>
+  <p><a href="https://telegra.ph/BLUECAKE-Hikari---CUM-RED148P-425G-08-23">[BLUECAKE] Hikari - CUM RED+(148P-4.25G)</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
