--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -83,8 +83,8 @@
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-%E5%8D%88%E5%90%8E%E7%89%9B%E4%B9%B3%E6%97%B6%E9%97%B4-135p-08-23">玉汇 午后牛乳时间 135p</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Vol038-%E6%8C%96%E6%8E%98%E5%A7%AC-130p-08-23">玉汇 Vol.038 挖掘姬 130p</a></p>
   <p><a href="https://telegra.ph/Yuuhui%E7%8E%89%E6%B1%87-Erophone-Re-%E7%9C%9F%E5%AD%90-%E5%92%8C%E6%9C%8D%E6%8A%B9%E6%B2%B982P-08-23">Yuuhui玉汇 Erophone Re 真子-和服抹油[82P]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-Vol041-%E8%A1%97%E5%A4%B4%E9%9C%B8%E7%8E%8B-%E6%98%A5%E4%B8%BD-89p-08-23">玉汇 Vol.041 街头霸王-春丽 89p</a></p>
+  <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87-%E5%9C%A3%E8%AF%9E%E7%89%B9%E8%BE%91-%E5%B0%BC%E5%B0%94%E6%9C%BA%E6%A2%B0%E7%BA%AA%E5%85%83-%E8%87%AA%E6%8B%8D%E5%8C%85-102P-464MB-08-23">玉汇 圣诞特辑-尼尔·机械纪元 自拍包 [102P-464MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
