--- a/年年全集/menu.html
+++ b/年年全集/menu.html
@@ -39,7 +39,7 @@
   <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E8%B5%9B%E5%8D%9A%E5%A5%B3%E5%AD%A9-44P-697MB-08-23">年年 赛博女孩 [44P-697MB]</a></p>
   <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E6%B4%B1%E6%B5%B7-50P-08-23">年年 洱海 50P</a></p>
   <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E6%98%A5%E9%A3%8E-50P-08-23">年年 春风 50P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B9%B4%E5%B9%B4-%E8%8B%97%E7%96%86%E5%B0%91%E5%A5%B3-08-23">年年 苗疆少女</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
