--- a/純愛neko全集/menu.html
+++ b/純愛neko全集/menu.html
@@ -10,7 +10,7 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%B4%94%E6%84%9Bneko-%E4%BA%BA%E5%A6%BB20-08-23">純愛neko 人妻2.0</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E7%B4%94%E6%84%9Bneko-%E5%A0%95%E8%90%BD%E4%BF%AE%E5%A5%B3-08-23">純愛neko_ 堕落修女</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
