--- a/过期米线线喵全集/menu.html
+++ b/过期米线线喵全集/menu.html
@@ -17,8 +17,8 @@
   <p><a href="https://telegra.ph/%E8%BF%87%E6%9C%9F%E7%B1%B3%E7%BA%BF%E7%BA%BF%E5%96%B5-%E7%8B%90%E7%8B%B8%E5%B0%8F%E5%A7%9055P-08-22">过期米线线喵 狐狸小姐55P</a></p>
   <p><a href="https://telegra.ph/%E8%BF%87%E6%9C%9F%E7%B1%B3%E7%BA%BF%E7%BA%BF%E5%96%B5-%E5%A4%B1%E8%90%BD%E5%85%94%E5%85%94-34P-08-22">过期米线线喵 失落兔兔 34P</a></p>
   <p><a href="https://telegra.ph/%E8%BF%87%E6%9C%9F%E7%B1%B3%E7%BA%BF%E7%BA%BF%E5%96%B5-%E7%A7%98%E4%B9%A6%E4%B8%BA%E4%BD%95%E8%BF%99%E6%A0%B7-24P-08-22">过期米线线喵 秘书为何这样 24P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%87%E6%9C%9F%E7%B1%B3%E7%BA%BF%E7%BA%BF%E5%96%B5-%E9%87%91%E4%B8%9D%E9%9B%80-23P-08-22">过期米线线喵 金丝雀 23P</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%87%E6%9C%9F%E7%B1%B3%E7%BA%BF%E7%BA%BF%E5%96%B5-%E5%A6%88%E5%A6%88%E5%AD%902-59P-419MB-08-23">过期米线线喵 妈妈子2 [59P-419MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
