--- a/Azami全集/menu.html
+++ b/Azami全集/menu.html
@@ -9,10 +9,7 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E5%A6%88%E5%A6%88%E5%AD%90-Blue-Archive---%E4%BC%8A%E8%90%BD%E3%83%9E%E3%83%AA%E3%83%BC%E4%BD%93%E6%93%8D%E6%9C%8Dcosplay-vol02-08-23">妈妈子 《Blue Archive - 伊落マリー（体操服）》cosplay vol.02</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Azami-Hoshino-Ai-34P-08-23">Azami Hoshino Ai 34P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
