--- a/byoru全集/menu.html
+++ b/byoru全集/menu.html
@@ -35,14 +35,14 @@
   <p><a href="https://telegra.ph/Byoru-Misa-Amane-Death-Note-61P8V-08-22">Byoru Misa Amane Death Note 61P8V</a></p>  
   <p><a href="https://telegra.ph/Byoru-KMS-Regensburg-08-22">Byoru KMS Regensburg</a></p>
   <p><a href="https://telegra.ph/Byoru-AdaWong-61P7V-08-23">Byoru AdaWong 61P7V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/Byoru-Himeno-49P5V-08-23">Byoru Himeno 49P5V</a></p>
+  <p><a href="https://telegra.ph/byoru-Yor-red-48P6V-1GB-08-23">byoru Yor red [48P6V-1GB]</a></p>
+  <p><a href="https://telegra.ph/byoru-Wednesday-47P6V-172GB-08-23">byoru Wednesday [47P6V-1.72GB]</a></p>  
+  <p><a href="https://telegra.ph/byoru-Viper-42P6V-149GB-08-23">byoru Viper [42P6V-1.49GB]</a></p>
+  <p><a href="https://telegra.ph/byoru-Vermeil-48P7V-103GB-08-23">byoru Vermeil [48P7V-1.03GB]</a></p>
+  <p><a href="https://telegra.ph/byoru-Rupee-51P7V-115GB-08-23">byoru Rupee [51P7V-1.15GB]</a></p>
+  <p><a href="https://telegra.ph/byoru-Inori-43P8V-122GB-08-23">byoru Inori [43P8V-1.22GB]</a></p>
+  <p><a href="https://telegra.ph/byoru-Chunli-63P8V-329GB-08-23">byoru Chunli [63P8V-3.29GB]</a></p>  
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
