--- a/rioko凉凉子全集/menu.html
+++ b/rioko凉凉子全集/menu.html
@@ -32,8 +32,8 @@
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E6%81%B0%E5%B7%B4%E8%80%B6%E5%A4%AB%E7%A4%BC%E6%9C%8D-08-23">凉凉子 恰巴耶夫礼服</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-American-ass-08-23">凉凉子 American ass</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E5%92%8C%E5%89%8D%E8%BE%88%E4%B8%80%E8%B5%B7%E5%87%BA%E5%B7%AE%E5%90%A7-08-23">凉凉子 和前辈一起出差吧</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E5%8D%A1%E8%8A%99%E5%8D%A1-08-23">凉凉子 卡芙卡</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E5%A4%A7%E5%87%A4-%E6%B5%B7%E6%BB%A8%E7%9A%84%E7%99%BD%E6%97%A5%E7%BE%8E%E6%A2%A6-08-23">凉凉子 大凤-海滨的白日美梦</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
