--- a/三度_69全集/menu.html
+++ b/三度_69全集/menu.html
@@ -10,5 +10,10 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E4%B8%89%E5%BA%A6-69---%E8%8F%B2%E4%BC%A6-80P2V-676MB-08-20">三度_69 - 菲伦 [80P2V-676MB]</a></p>
+  <p><a href="https://telegra.ph/%E4%B8%89%E5%BA%A6-69-%E8%89%BE%E7%BB%B4%E9%9C%B2%E7%90%AA%E4%BA%9A-08-23">三度_69 艾维露琪亚</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
