--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -59,8 +59,8 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E5%88%98%E6%98%93%E6%96%AF-50P-08-23">九言 刘易斯 50P</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-2b%E7%9A%84%E5%AB%81%E8%A1%A3-08-23">九言 2b的嫁衣</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E4%BF%AE%E5%A5%B3%E4%B8%8E%E7%8B%97-60P6V-08-23">九言 修女与狗 60P6V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E7%BA%AF%E7%99%BD%E5%B9%BB%E6%83%B3-08-23">九言 纯白幻想</a></p>  
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E6%96%91%E7%82%B9%E4%BF%AE%E7%8C%AB-08-23">九言 斑点修猫</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p> 
   <p><a href="../index.html">返回总目录</a></p>
