--- a/女主K全集/menu.html
+++ b/女主K全集/menu.html
@@ -23,8 +23,8 @@
   <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E5%8F%AF%E7%88%B1%E7%9A%84%E5%88%B6%E6%9C%8D-99P1V-08-23">女主K 可爱的制服 99P1V</a></p>
   <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E8%B1%B9%E7%BA%B9%E5%86%85%E8%A1%A3-100P-08-23">女主K 豹纹内衣 100P</a></p>
   <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E6%80%A7%E6%84%9F%E7%9A%84%E9%BB%91%E7%8C%AB80P-08-23">女主K 性感的黑猫[80P]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBK-%E7%B4%A0%E9%A2%9C%E7%9A%84%E6%B8%85%E6%99%A8-102P-384M-08-23">女主K 素颜的清晨 [102P-384M]</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%B3%E4%B8%BBk-%E5%B0%8F%E7%BA%A2%E5%B8%BD%E5%92%8C%E7%BA%A2%E8%8B%B9%E6%9E%9C-86P-366MB-08-23">女主k 小红帽和红苹果 [86P-366MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
