--- a/封疆疆全集/menu.html
+++ b/封疆疆全集/menu.html
@@ -37,7 +37,7 @@
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E7%94%B3%E9%B9%A4%E6%B5%B7%E7%81%AF%E8%8A%82-40P-619MB-08-22">封疆疆 申鹤海灯节 [40P-619MB] (原神)</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E5%A6%83%E5%92%B2%E5%85%94%E5%A5%B3%E9%83%8E-08-22">封疆疆 妃咲兔女郎</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E7%A2%A7%E8%93%9D%E6%A1%A3%E6%A1%88-%E5%A6%83%E5%92%B2-34P-348MB-08-22">封疆疆 碧蓝档案 妃咲 [34P-348MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-NIKKE-%E8%83%9C%E5%88%A9%E5%A5%B3%E7%A5%9E-%E6%B5%B7%E4%BC%A6%E5%A8%9C-36P-582MB-08-23">封疆疆 NIKKE 胜利女神 海伦娜 [36P-582MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
