--- a/您的蛋蛋全集/menu.html
+++ b/您的蛋蛋全集/menu.html
@@ -13,8 +13,8 @@
   <p><a href="https://telegra.ph/%E6%82%A8%E7%9A%84%E8%9B%8B%E8%9B%8B---%E5%8F%8D%E5%B7%AE%E5%AD%A6%E5%A6%B9-08-20">您的蛋蛋 - 反差学妹</a></p>
   <p><a href="https://telegra.ph/%E6%82%A8%E7%9A%84%E8%9B%8B%E8%9B%8B---%E5%94%87%E8%86%9C-37P1V-08-21">您的蛋蛋 - 唇膜 37P1V</a></p>
   <p><a href="https://telegra.ph/%E6%82%A8%E7%9A%84%E8%9B%8B%E8%9B%8B-%E4%BF%98%E8%8E%B7%E5%88%B6%E6%9C%8D-81P-08-23">您的蛋蛋 俘获制服 81P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%82%A8%E7%9A%84%E8%9B%8B%E8%9B%8B-%E6%BA%90%E8%B5%96%E5%85%89%E5%83%B5%E5%B0%B8-40P1V-179MB-08-23">您的蛋蛋 源赖光僵尸 [40P1V-179MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%82%A8%E7%9A%84%E8%9B%8B%E8%9B%8B-%E4%BD%A0%E7%9A%84%E7%8B%90%E4%BB%99%E5%A5%B3%E5%8F%8B-08-23">您的蛋蛋 你的狐仙女友</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
