--- a/桜桃喵全集/menu.html
+++ b/桜桃喵全集/menu.html
@@ -29,7 +29,7 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E6%A1%83%E5%AD%90-48P-08-23">桜桃喵 桃子 48P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E7%BA%A2%E6%B3%A2%E7%82%B9-45P-08-23">桜桃喵 红波点 45P</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E7%8F%8A%E7%91%9A%E5%AE%AB%E5%BF%83%E6%B5%B7%E5%8E%9F%E7%A5%9E-08-23">桜桃喵 珊瑚宫心海（原神）</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E6%9E%9C%E5%A4%8F-36p-08-23">桜桃喵 果夏 36p</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
