--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -62,8 +62,8 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC-%E5%A6%AE%E9%9C%B2-%E5%8E%9F%E7%A5%9E-08-23">水淼 妮露 (原神)</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC-%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-08-23">水淼 飞鸟马时</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua-%E7%94%B3%E9%B9%A4%E6%97%97%E8%A2%8D-%E5%8E%9F%E7%A5%9E-08-23">水淼aqua 申鹤旗袍 (原神)</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-%E9%A3%9B%E9%B3%A5%E9%A6%AC%E3%83%88%E3%82%AD-20P-23MB-08-23">水淼Aqua 飛鳥馬トキ [20P-23MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-Fantia%E5%85%AD%E6%9C%88%E9%99%90%E5%AE%9A%E6%98%8E%E6%97%A5%E5%A5%88%E4%B8%A4%E5%A5%97-46P-55MB-08-23">水淼Aqua Fantia六月限定明日奈两套 [46P-55MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
