--- a/疯猫ss全集/menu.html
+++ b/疯猫ss全集/menu.html
@@ -20,6 +20,13 @@
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E5%B8%83%E6%B4%9B%E5%A6%AE%E5%A8%85-%E5%A4%A7%E9%B8%AD%E9%B8%AD56P-%E5%B4%A9%E5%9D%8F-08-22">疯猫ss 布洛妮娅 大鸭鸭56P 崩坏</a></p>
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E5%9C%A3%E8%AF%9E%E7%89%B9%E5%85%B8%E7%99%BD%E8%89%B2%E6%AF%9B%E8%A1%A3-98P1V-08-22">疯猫ss 圣诞特典&白色毛衣 98P1V</a></p>
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E9%BB%91%E8%89%B2%E5%93%91%E5%85%89%E5%85%94-08-23">疯猫ss 黑色哑光兔</a></p>
+  <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E6%81%B6%E6%AF%92-21P-239MB-08-23">疯猫ss 恶毒 [21P-239MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
