--- a/花铃(花玲)全集/menu.html
+++ b/花铃(花玲)全集/menu.html
@@ -37,8 +37,8 @@
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E5%8F%AF%E7%95%8F%E6%97%97%E8%A2%8D-83P-425MB-08-23">花铃 可畏旗袍 [83P-425MB]</a></p>
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E7%8C%A9%E7%BA%A2%E6%8A%A4%E5%A3%AB-77P-281MB-08-23">花铃 猩红护士 [77P-281MB]</a></p>
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E7%94%98%E9%9B%A8%E7%A7%98%E4%B9%A6-%E5%8E%9F%E7%A5%9E-08-23">花铃 甘雨秘书 （原神）</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E5%96%9C%E5%A4%9A%E5%B7%9D%E6%B5%B7%E6%A2%A6-%E9%BB%91%E6%B1%9F%E9%9B%AB-40P-204M-08-23">花铃 喜多川海梦 黑江雫 [40P-204M]</a></p>
+  <p><a href="https://telegra.ph/%E8%8A%B1%E7%8E%B2-%E9%80%8F%E6%98%8E%E5%A5%B3%E4%BB%86-08-23">花玲 透明女仆</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
