--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -81,7 +81,7 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E7%89%9B%E7%89%9B%E5%A5%B3%E4%BB%86-08-23">蠢沫沫 牛牛女仆</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E8%AF%BE%E9%97%B4-08-23">蠢沫沫 课间</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%8D%88%E5%90%8E%E8%AF%BE%E9%97%B4-08-23">蠢沫沫 午后课间</a></p>   
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%85%B3%E4%BA%8E%E6%88%91%E5%AD%A6%E5%A6%B9%E6%98%AF%E4%B8%AA%E7%8C%AB%E5%A8%98%E8%BF%99%E4%BB%B6%E4%BA%8B-22P-244MB-08-23">蠢沫沫 关于我学妹是个猫娘这件事 [22P-244MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
