--- a/许岚LAN全集/menu.html
+++ b/许岚LAN全集/menu.html
@@ -19,6 +19,11 @@
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E7%99%BD%E4%B8%9D%E8%93%9D%E8%A3%99-08-23">许岚 白丝蓝裙</a></p>
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E5%8D%8A%E9%80%8F%E6%AF%9B%E8%A1%A3-40P-08-23">许岚LAN 半透毛衣 40P</a></p>
   <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E9%BB%91%E4%B8%9D%E6%8A%A4%E5%A3%AB-40P-753M-08-23">许岚 黑丝护士 [40P-753M]</a></p>
+  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9ALAN-%E6%94%BE%E5%AD%A6%E5%9B%9E%E5%AE%B6-31P-08-23">许岚LAN 放学回家 31P</a></p>
+  <p><a href="https://telegra.ph/%E8%AE%B8%E5%B2%9A-%E7%81%B0%E8%A3%99X%E7%81%B0%E4%B8%9D%E5%A7%90%E5%A7%90-08-23">许岚 灰裙X灰丝姐姐</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
