--- a/Nyako喵子全集/menu.html
+++ b/Nyako喵子全集/menu.html
@@ -12,11 +12,11 @@
   <p><a href="https://telegra.ph/Nyako%E5%96%B5%E5%AD%90-%E7%94%B5%E5%AD%90%E7%89%8854%E8%AF%B1%E6%8B%90%E6%9C%AC-08-22">Nyako喵子 电子版54诱拐本</a></p>  
   <p><a href="https://telegra.ph/Nyako%E5%96%B5%E5%AD%90-%E7%94%B5%E5%AD%90%E7%89%8854-%E8%87%AA%E6%8B%8D-08-22">Nyako喵子 电子版54 自拍</a></p>
   <p><a href="https://telegra.ph/Nyako%E5%96%B5%E5%AD%90-%E7%97%B4%E5%A5%B3%E3%83%A1%E3%82%A4%E3%83%89-151P-08-22">Nyako喵子 痴女メイド 151P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%96%B5%E5%AD%90Nyako-%E6%83%85%E8%B6%A3%E7%8F%8D%E7%8F%A02-53P1V-152MB-08-23">喵子Nyako 情趣珍珠2 [53P1V-152MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%96%B5%E5%AD%90Nyako-Nyako%E5%96%B5%E5%AD%90-%E6%83%85%E8%B6%A3%E7%8F%8D%E7%8F%A0-50P1V-185MB-08-23">喵子Nyako #Nyako喵子 情趣珍珠 [50P1V-185MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%96%B5%E5%AD%90Nyako-Nyako%E5%96%B5%E5%AD%90-%E7%94%B5%E5%AD%90%E7%89%8841-%E5%92%8C%E9%A3%8E%E7%83%82%E6%BC%AB-%E8%87%AA%E6%8B%8D-08-23">喵子Nyako #Nyako喵子 电子版41 和风烂漫 自拍</a></p>
+  <p><a href="https://telegra.ph/%E5%96%B5%E5%AD%90Nyako-Nyako%E5%96%B5%E5%AD%90-%E7%94%B5%E5%AD%90%E7%89%8841-%E5%92%8C%E9%A3%8E%E7%83%82%E6%BC%AB-%E6%B5%B4%E8%A1%A3-08-23">喵子Nyako #Nyako喵子 电子版41 和风烂漫 浴衣</a></p>
+  <p><a href="https://telegra.ph/%E5%96%B5%E5%AD%90Nyako-Nyako%E5%96%B5%E5%AD%90-%E5%B7%AB%E5%A5%B3-08-23">喵子Nyako #Nyako喵子 巫女</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
