--- a/[Espacia Korea] EHC全集/menu.html
+++ b/[Espacia Korea] EHC全集/menu.html
@@ -9,8 +9,12 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/Momoko%E8%91%B5%E8%91%B5-%E6%9F%B4%E9%83%A1%E6%9C%AC-%E7%A4%BC%E6%9C%8D%E6%97%97%E8%A2%8D-70P-690MB-08-23">Momoko葵葵 柴郡本 礼服+旗袍 [70P-690MB]</a></p>
-  <p><a href="https://telegra.ph/Momoko%E8%91%B5%E8%91%B5%E7%93%9C%E5%B8%8C%E9%85%B1-BA%E5%85%94%E5%85%94cos%E5%8F%8C%E4%BA%BA%E6%9C%AC-93P-272MB-08-23">Momoko葵葵&瓜希酱 BA兔兔cos双人本 [93P-272MB]</a></p>
+  <p><a href="https://telegra.ph/Espacia-Korea-EHC-086---SOMI-%EC%86%8C%EB%AF%B8-50P-654MB-08-23">[Espacia Korea] EHC #086 - SOMI (소미) [50P-654MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
