--- a/byoru全集/menu.html
+++ b/byoru全集/menu.html
@@ -43,13 +43,13 @@
   <p><a href="https://telegra.ph/byoru-Rupee-51P7V-115GB-08-23">byoru Rupee [51P7V-1.15GB]</a></p>
   <p><a href="https://telegra.ph/byoru-Inori-43P8V-122GB-08-23">byoru Inori [43P8V-1.22GB]</a></p>
   <p><a href="https://telegra.ph/byoru-Chunli-63P8V-329GB-08-23">byoru Chunli [63P8V-3.29GB]</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Byoru-Hoshino-Ai-08-23">Byoru Hoshino Ai</a></p>
+  <p><a href="https://telegra.ph/Byoru-Tiger-HD-27P-27MB-08-23">Byoru Tiger HD [27P-27MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru-Pink-Cymeow-HD-29P-67MB-08-23">Byoru Pink Cymeow HD [29P-67MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru-Nyanko-Kawaii-Nekomimi-HD-15P-56MB-08-23">Byoru Nyanko Kawaii Nekomimi HD [15P-56MB]</a></p>
+  <p><a href="https://telegra.ph/Byoru-Luna-Moon-Festival-HD-Set-24P-179MB-08-23">Byoru Luna Moon Festival HD Set [24P-179MB]</a></p>  
+  <p><a href="https://telegra.ph/Byoru-Leifang-Autumn-Festival-Mooncake-HD-30P-180MB-08-23">Byoru Leifang Autumn Festival Mooncake HD [30P-180MB]</a></p>
+  <p><a href="https://telegra.ph/byoru-Ghislaine-38P7V-954MB-08-23">byoru Ghislaine [38P7V-954MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
