--- a/eve全集/menu.html
+++ b/eve全集/menu.html
@@ -9,8 +9,9 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E5%80%A6%E5%80%A6%E5%96%B5-%E7%94%98%E9%9B%A8%E9%AD%85%E9%AD%94%E5%8E%9F%E7%A5%9E-08-22">倦倦喵 甘雨魅魔（原神）</a></p>
-  <p><a href="https://telegra.ph/%E5%80%A6%E5%80%A6%E5%96%B5-%E5%90%8A%E5%B8%A6%E7%99%BD%E4%B8%9D-08-23">倦倦喵 吊带白丝</a></p>
+  <p><a href="https://telegra.ph/eve-%E5%8E%9F%E7%A5%9E-%E7%94%98%E9%9B%A860P2V-130M-08-23">eve 原神 甘雨[60P2V-130M]</a></p> 
+  <p><a href="https://telegra.ph/eve-Daily-47P1V-98MB-08-23">eve Daily [47P1V-98MB]</a></p>
+  <p><a href="https://telegra.ph/eve-%E6%A2%A6%E9%AD%87116P1V-11G-08-23">eve 梦魇[116P1V-1.1G]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
