--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -64,6 +64,12 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua-%E7%94%B3%E9%B9%A4%E6%97%97%E8%A2%8D-%E5%8E%9F%E7%A5%9E-08-23">水淼aqua 申鹤旗袍 (原神)</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-%E9%A3%9B%E9%B3%A5%E9%A6%AC%E3%83%88%E3%82%AD-20P-23MB-08-23">水淼Aqua 飛鳥馬トキ [20P-23MB]</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-Fantia%E5%85%AD%E6%9C%88%E9%99%90%E5%AE%9A%E6%98%8E%E6%97%A5%E5%A5%88%E4%B8%A4%E5%A5%97-46P-55MB-08-23">水淼Aqua Fantia六月限定明日奈两套 [46P-55MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-%E8%99%8E%E7%BA%B9%E6%AF%94%E5%9F%BA%E5%B0%BC33P-38MB-08-23">水淼Aqua 虎纹比基尼[33P-38MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua-%E8%B1%B9%E7%BA%B9%E5%85%94%E5%A5%B3%E9%83%8E37P-41MB-08-23">水淼Aqua 豹纹兔女郎[37P-41MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
