--- a/advertise.html
+++ b/advertise.html
@@ -5,5 +5,6 @@
 </head>
 <body>
   <p><a href="https://t.me/yunvfuliji" target="_blank" style="color:red;font-weight:bold;">玉女宫福利姬频道←点击关注</a></p>
+  <p><a href="https://t.me/yunvfuliji" target="_blank" style="color:red;font-weight:bold;">玉女宫漫画频道←点击关注</a></p>
 </body>
 </html>
