--- a/布丁大法 米布丁&油布丁 再来一勺大布丁全集/menu.html
+++ b/布丁大法 米布丁&油布丁 再来一勺大布丁全集/menu.html
@@ -48,9 +48,9 @@
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-%E7%88%B1%E5%BF%83%E5%A5%B3%E4%BB%86-121P1V-08-23-2">布丁大法 爱心女仆 121P1V</a></p>  
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-%E9%BB%91%E5%8A%A0%E4%BB%91-08-23">布丁大法 黑加仑</a></p>  
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-C9-%E9%BB%91%E5%B7%A7-08-23">布丁 C9 黑巧</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81--%E5%B8%83%E6%9C%97%E5%B0%BC-08-23">布丁 Ⅵ 布朗尼</a></p>  
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81%E5%A4%A7%E6%B3%95-IV%E5%A5%A5%E5%88%A9%E5%A5%A549P3V---446MB-08-23">布丁大法 IV奥利奥[49P3V - 446MB]</a></p>  
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81-%E7%8F%8A%E7%91%9A%E9%B8%A1%E5%B0%BE%E9%85%92-08-23">布丁 珊瑚鸡尾酒</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
