--- a/珟_珏Dita全集/menu.html
+++ b/珟_珏Dita全集/menu.html
@@ -9,8 +9,9 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E5%80%A6%E5%80%A6%E5%96%B5-%E7%94%98%E9%9B%A8%E9%AD%85%E9%AD%94%E5%8E%9F%E7%A5%9E-08-22">倦倦喵 甘雨魅魔（原神）</a></p>
-  <p><a href="https://telegra.ph/%E5%80%A6%E5%80%A6%E5%96%B5-%E5%90%8A%E5%B8%A6%E7%99%BD%E4%B8%9D-08-23">倦倦喵 吊带白丝</a></p>
+  <p><a href="https://telegra.ph/%E7%8F%9F-%E7%8F%8FDita-%E6%9A%97%E9%BB%91%E5%85%94%E5%A5%B3%E9%83%8E-40P-618MB-08-23">珟_珏Dita 暗黑兔女郎 [40P-618MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
