--- a/瓜希酱全集/menu.html
+++ b/瓜希酱全集/menu.html
@@ -10,5 +10,11 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%93%9C%E5%B8%8C%E9%85%B1---%E9%98%BF%E5%B0%94%E6%AF%94%E6%81%A9%E6%97%97%E8%A2%8D-08-19">瓜希酱 - 阿尔比恩旗袍</a></p>
+  <p><a href="https://telegra.ph/%E7%93%9C%E5%B8%8C%E9%85%B1-%E5%8F%B2%E5%B0%94%E7%89%B9%E5%B0%94-104P-683MB-08-23">瓜希酱 史尔特尔 [104P-683MB]</a></p>
+  <p><a href="https://telegra.ph/Momoko%E8%91%B5%E8%91%B5%E7%93%9C%E5%B8%8C%E9%85%B1-BA%E5%85%94%E5%85%94cos%E5%8F%8C%E4%BA%BA%E6%9C%AC-93P-272MB-08-23">Momoko葵葵&瓜希酱 BA兔兔cos双人本 [93P-272MB]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
