--- a/漫画频道总目录/index.html
+++ b/漫画频道总目录/index.html
@@ -11,6 +11,6 @@
   </div>
   <hr>
   <h2>漫画目录</h2>
-  <p><a href="./测试目录全集/menu.html">测试目录全集</a></p> 
+  <p><a href="./短篇全集/menu.html">短篇全集</a></p> 
 </body>
 </html>
