--- a/漫画(黑白)频道总目录/短篇全集/menu.html
+++ b/漫画(黑白)频道总目录/短篇全集/menu.html
@@ -9,12 +9,20 @@
 	<p><a href="../index.html">返回当前频道总目录</a></p>
   </div>
   <hr>
-  <p><a href="https://telegra.ph/%E9%95%BF%E9%80%94%E7%BB%BF%E7%9A%AE%E7%81%AB%E8%BD%A6-08-24">长途绿皮火车</a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
-  <p><a href=""></a></p>
+  <p><a href="https://telegra.ph/%E6%99%AE%E6%AE%B5%E3%81%A8%E3%81%AF%E5%B0%91%E3%81%97%E9%81%95%E3%81%86%E3%83%9F%E3%83%9F%E3%83%83%E3%82%AF%E3%82%92%E7%99%BA%E8%A6%8B%E3%81%97%E3%81%9F%E3%83%95%E3%83%AA%E3%83%BC%E3%83%AC%E3%83%B3-%E8%91%AC%E9%80%81%E3%81%AE%E3%83%95%E3%83%AA%E3%83%BC%E3%83%AC%E3%83%B3-%E7%84%A1%E4%BF%AE%E6%AD%A3---Page-1-08-24">普段とは少し違うミミックを発見したフリーレン (葬送のフリーレン) [無修正] - Page 1</a></p>
+  <p><a href="https://telegra.ph/Milknium-Family-Otona-Ni-Akogareru-Minarai-Shisuta-no-Kuri-Ochi-Taiko-Nikki-Chinese-5DK%E4%B8%AA%E4%BA%BA%E6%B1%89%E5%8C%96-08-24">对抗日记 Otona Ni Akogareru Minarai Shisuta no Kuri Ochi Taiko Nikki</a></p>
+  <p><a href="https://telegra.ph/%E7%89%9B%E5%A8%98%E5%B0%8F%E5%A7%90-Nise-Ushi-no-Oneesan-Chinese-5DK%E4%B8%AA%E4%BA%BA%E6%B1%89%E5%8C%96-08-24">牛娘小姐 [Nise] Ushi no Oneesan [Chinese]</a></p>
+  <p><a href="https://telegra.ph/RAin-%E5%A5%B4%E9%9A%B6%E5%B0%91%E5%A5%B3%E7%9A%84%E5%8A%B1%E5%BF%97%E4%BA%BA%E7%94%9F-%E4%B8%AD%E5%9B%BD%E8%AA%9E-08-24">[RA.in] 奴隶少女的励志人生 [中国語]</a></p>
+  <p><a href="https://telegra.ph/Ichijikushirabe-Shiki-Shirabe-Shiki-Teikyuu-Zako-Inma-no-Shokushu-ga-Fukai-nanode-Kankaku-Shadan-Mahou-o-Tenkai-Shimashita-wa-Ch-08-24">低级淫魔触手</a></p>
+  <p><a href="https://telegra.ph/%E7%A7%98%E5%AF%86%E9%98%B4%E6%A0%B8%E9%94%BB%E7%82%BC-Milknium-Family-Clitoris-no-Himitsu-Tanren-Massage-Chinese-08-24">秘密阴核锻炼 </a></p>
+  <p><a href="https://telegra.ph/%E8%B0%83%E6%95%99%E5%B0%91%E5%A5%B3%E8%BE%BE%E5%88%B0%E7%BB%9D%E9%A1%B6-no-name-Choukyou-Shoujo-Clitoris-Renzoku-Zecchou-Chinese-5DK%E4%B8%AA%E4%BA%BA%E6%B1%89%E5%8C%96-08-24">调教少女达到绝顶 </a></p>
+  <p><a href="https://telegra.ph/DID%E9%83%A8-VS-BDSM%E9%83%A8-%E9%83%A8%E8%90%BD%E4%BA%89%E5%A4%BA%E6%88%98-ura-macoto-DID-club-VS-BDSM-clubclub-room-battle-DID-part-%E8%B5%B7%E8%90%BD%E5%A7%94%E6%89%98%E9%98%BF%E5%8D%A1%E5%A7%86%E6%B1%89%E5%8C%96-08-24">DID部 VS BDSM部 部落争夺战</a></p>
+  <p><a href="https://telegra.ph/%E6%96%B0%E6%9C%BA%E6%B5%8B%E8%AF%95%E5%91%98-%E9%98%BF%E6%85%88%E8%B0%B7%E6%97%A5%E6%AD%A5%E7%BE%8E-2-The-Notes-E-Note-Machine-Tester-Ajitani-Hifumi-2-Blue-Archive-Chinese-Digital-08-24">新机测试员 阿慈谷日步美 2</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
+  <p><a href="../index.html">返回当前频道总目录</a></p>
 </body>
 </html>
