--- a/漫画(彩色)频道总目录/短篇全集/menu.html
+++ b/漫画(彩色)频道总目录/短篇全集/menu.html
@@ -10,6 +10,18 @@
   </div>
   <hr>
   <p><a href="https://telegra.ph/%E9%95%BF%E9%80%94%E7%BB%BF%E7%9A%AE%E7%81%AB%E8%BD%A6-08-24">长途绿皮火车</a></p>
+  <p><a href="https://telegra.ph/%E6%99%AE%E6%AE%B5%E3%81%A8%E3%81%AF%E5%B0%91%E3%81%97%E9%81%95%E3%81%86%E3%83%9F%E3%83%9F%E3%83%83%E3%82%AF%E3%82%92%E7%99%BA%E8%A6%8B%E3%81%97%E3%81%9F%E3%83%95%E3%83%AA%E3%83%BC%E3%83%AC%E3%83%B3-%E8%91%AC%E9%80%81%E3%81%AE%E3%83%95%E3%83%AA%E3%83%BC%E3%83%AC%E3%83%B3-%E7%84%A1%E4%BF%AE%E6%AD%A3---Page-1-08-24">“那个RC也是”禁止自慰和画画的生活！？性爱欲旺盛的女高中生，被贞操带控制高潮……“早日康复”</a></p>
+  <p><a href="https://telegra.ph/Grand-Pli%C3%A9-Erohamu-Chikubi-Batsu-%E4%B9%B3%E5%A4%B4%E6%83%A9%E7%BD%9A-Chinese-%E6%9A%B4%E7%A2%A7%E6%B1%89%E5%8C%96%E7%BB%84-08-24">Chikubi Batsu 乳头惩罚</a></p>
+  <p><a href="https://telegra.ph/JK%E5%90%9B-%E9%9B%B6%E7%8F%A0-%E8%B6%85%E6%9A%B4%E9%9C%B2%E7%9A%84%E7%B4%84%E6%9C%83-Chinese-08-24">[JK君] 零珠-超暴露的約會 [Chinese]</a></p>
+  <p><a href="https://telegra.ph/LVI-Kuronami-san-Mousou-suru-Chinese-BLUE%E6%B0%AA%E4%B8%AA%E4%BA%BA%E7%BF%BB%E8%AF%91-08-24">[LVI] Kuronami-san Mousou suru [Chinese] [BLUE氪个人翻译]</a></p>
+  <p><a href="https://telegra.ph/ura-macoto-Nawakai-Solo-Beginner-Forced-Bondage-ChoukyouPart-2-%E9%98%BF%E5%8D%A1%E5%A7%86%E6%B1%89%E5%8C%96-08-24">[ura_macoto] Nawakai Solo Beginner Forced Bondage Choukyou:Part 2 [阿卡姆汉化]</a></p>
+  <p><a href="https://telegra.ph/himitsuKoori039s-diary-playing-in-the-parkchinese-08-24">[himitsu]Koori&#039;s diary playing in the park[chinese]</a></p>
+  <p><a href="">“村上海军的屋形（Murakami Navy）”将与假冒的Core Channel进行转职游戏，若输了，就将成为Core Channel当晚的玩物。</a></p>
+  <p><a href="https://telegra.ph/11-08-24-26">[开甲韦一郎] 开拓者变成小孩子了 1-32 (Honkai: Star Rail) [Chinese] - Page 1</a></p>
+  <p><a href="https://telegra.ph/Penti-%E6%B5%B7%E8%B4%BC%E7%8E%8B-Fanbox%E3%81%BE%E3%81%A8%E3%82%81-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-1-08-24">[Penti] 海贼王 Fanboxまとめ [中国翻訳] - Page 1</a></p>
+  <p><a href="https://telegra.ph/%E3%81%9B%E3%82%8C%E3%81%84%E3%81%A6%E3%82%8B-%E4%BD%B3%E5%A5%88%E3%81%A1%E3%82%83%E3%82%93%E3%82%B7%E3%83%AA%E3%83%BC%E3%82%BA-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-1-08-24-3">[せれいてる] 佳奈ちゃんシリーズ [中国翻訳] - Page 1</a></p>
+  <p><a href="https://telegra.ph/%E3%81%9B%E3%82%8C%E3%81%84%E3%81%A6%E3%82%8B-%E4%BD%B3%E5%A5%88%E3%81%A1%E3%82%83%E3%82%93%E3%82%B7%E3%83%AA%E3%83%BC%E3%82%BA-%E4%B8%AD%E5%9B%BD%E7%BF%BB%E8%A8%B3---Page-2-08-24">[せれいてる] 佳奈ちゃんシリーズ [中国翻訳] - Page 2</a></p>
+  <p><a href=""></a></p>
   <p><a href=""></a></p>
   <p><a href=""></a></p>
   <p><a href=""></a></p>
